--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solana Flashloan Arbitrage Bot</title>
     <meta name="description" content="Solana Flashloan Arbitrage Bot - Maximize profits with risk-free arbitrage across Solana DEXs" />
-    <meta name="author" content="SolanaFlash" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta name="author" content="SolFlashBot" />
+    <meta property="og:image" content="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/ico" href="/fav.png"/>
   </head>
 
   <body>
