Rename project to Solana Trading Bot
Update the project name and description to reflect the broader topic of Solana trading bots, rather than focusing solely on flashloan arbitrage.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solana Flashloan Arbitrage Bot</title>
-    <meta name="description" content="Solana Flashloan Arbitrage Bot - Maximize profits with risk-free arbitrage across Solana DEXs" />
+    <title>Solana Trading Bot</title>
+    <meta name="description" content="Solana Trading Bot - Maximize profits with automated trading across Solana DEXs" />
     <meta name="author" content="SolFlashBot" />
     <meta property="og:image" content="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
